@@ -34,41 +34,34 @@
  *
  *************** <auto-copyright.pl END do not edit this line> ***************/
 
-package org.vrjuggler.tweek.event;
-
-import java.util.EventObject;
-import org.vrjuggler.tweek.beans.FileLoader;
+package org.vrjuggler.tweek.beans;
 
 
 /**
- * Event generated by a Tweek Bean when a file manipulation activity has
- * taken place.
+ * The interface used to identify Beans as being able to handle undo and redo
+ * events.  This interface must be implemented by the Tweek Panel Bean that
+ * will be loaded and instantiated by the Tweek Java GUI.  The Tweek Java GUI
+ * only learns of UndoHandler implementations when the Panel Bean is focused.
  *
- * @see FileActionListener
- *
- * @since 0.92.3
+ * @since 0.92.4
  */
-public class FileActionEvent extends EventObject
+public interface UndoHandler
 {
-   public FileActionEvent(FileLoader source)
-   {
-      super(source);
-      fileLoader = source;
-   }
+   public javax.swing.undo.UndoManager getUndoManager();
 
    /**
-    * @since 0.92.4
+    * Invoked when the user wants to undo an action.
+    *
+    * @return true is returned if another undo operation can be performed;<br>
+    *         false is returned otherwise.
     */
-   public FileActionEvent(Object source, FileLoader loader)
-   {
-      super(source);
-      fileLoader = loader;
-   }
+   public void undoRequested();
 
-   public FileLoader getFileLoader()
-   {
-      return fileLoader;
-   }
-
-   private FileLoader fileLoader = null;
+   /**
+    * Invoked when the user wants to redo an action that was undone.
+    *
+    * @return true is returned if another redo operation can be performed;<br>
+    *         false is returned otherwise.
+    */
+   public void redoRequested();
 }
